sandc/test/fixtures/pbtRegression/shouldSucceed/forBinding/ForBinding.sand
pub class ForBinding {
    pub foo(z: int[+]) {
        for (x, y) in z.enumerate() {
            x(y);
        }
    }
}