sandc/test/fixtures/pbtRegression/shouldFail/implicitShadowing/forBinding/flatTupleBinding/FlatTupleBinding.sand
pub class FlatTupleBinding {
    foo() {
        let i = 0;
        for (v, i) in (0..9).enumerate() {
            
        }
    }
}